Added youtube player

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
     <title>EZ</title>
 </head>
 <body>
+<iframe width="1131" height="636" src="https://www.youtube.com/embed/4xZKqn3thC0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <h1>EZ</h1>
 </body>
 </html>
