--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,15 +3,14 @@
 <body>
     <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
     <div id="player"></div>
-
     <script src="/socket.io.js"></script>
     <script>
         //socket conn
-        let socket = io.connect('http://localhost');
-        // socket.on('news', function (data) {
-        //     console.log(data);
-        //     socket.emit('my ', { my: 'data' });
-        // });
+        let roomId = 'Ad3FdjD';
+        let socket = io.connect('http://localhost/');
+        socket.on('connect', () => {
+            socket.emit('join', { roomId });
+        });
 
         // 2. This code loads the IFrame Player API code asynchronously.
         var tag = document.createElement('script');
@@ -29,7 +28,7 @@
                 videoId: 'M7lc1UVf-VE',
                 events: {
                     'onStateChange': onPlayerStateChange,
-                    'onReady': onPlayerReady
+                    'onReady': onPlayerReady,
                 }
             });
         }
@@ -50,6 +49,7 @@
                 socket.emit('pause');
             }
         }
+
         socket.on('pause', () => {
             player.pauseVideo();
         });
@@ -57,7 +57,6 @@
             player.seekTo(data.time);
             player.playVideo();
         });
-        socket.on('getTime')
         
     </script>
 </body>
