Added semaphore.js script to index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
     <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
     <div id="player"></div>
     <script src="/socket.io.js"></script>
+    <script src="/semaphore.js"></script>
     <script>
         //socket conn
         let roomId = location.href.split('/')[3];
